Add learning notes, paper notes

--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Lanyue Tang"  # Update this with your site title
 title_separator          : "-"
 name                     : &name "Lanyue Tang"  # Update this with your name, used in the page title and author profile
-description              : &description "Lanyue Tang's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : http://localhost:4000 # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+description              : &description "Lanyue Tang's academic"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://zhuobietly.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "lanyuetang/lanyuetang.github.io"
+baseurl                  : "/lanyuetang.github.io" # the subpath of your site, e.g. "/blog"
+repository               : "zhuobietly/lanyuetang.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
